Refactor test to use List.of instead of Arrays.asList